# field-monitor

./: .editorconfig  .gitignore  .gitmodules  .nixignore  .stignore  CONTRIBUTING.md  Cargo.toml  FieldMonitor.doap  README.md  build-and-run-dev.sh  de.capypara.ProxmoxViewer.json  flake.nix  meson.build  meson.options
.github/: dependabot.yml
build-aux/nix/: pkg.nix  (+4 more)
connection/debug/: Cargo.toml
connection/debug/src/: arbitrary_adapter.rs  behaviour_preferences.blp  behaviour_preferences.rs  field-monitor-connection-debug.gresource.xml  lib.rs  meson.build  preferences.blp  preferences.rs  vte_adapter.rs
connection/generic-group/: Cargo.toml
connection/generic-group/src/: credential_preferences.blp  credential_preferences.rs  field-monitor-connection-generic-group.gresource.xml  lib.rs  meson.build  preferences.blp  preferences.rs  server_config.rs  server_preferences.blp  server_preferences.rs  util.rs
connection/generic-group/src/connection/: mod.rs  rdp.rs  spice.rs  vnc.rs
connection/libvirt/: Cargo.toml
connection/libvirt/src/: connection.rs  console.rs  field-monitor-connection-libvirt.gresource.xml  lib.rs  meson.build  qemu_preferences.blp  qemu_preferences.rs
connection/libvirt/src/connection/: adapter.rs  graphics.rs  mod.rs
connection/libvirt/src/hypervisor/: mod.rs  qemu.rs
connection/proxmox/: Cargo.toml
connection/proxmox/proxmox-api/: Cargo.toml
connection/proxmox/proxmox-api/examples/: apicli.rs  proxmox_apicli.rs
connection/proxmox/proxmox-api/src/: datatypes.rs  lib.rs
connection/proxmox/proxmox-api/src/datatypes/: ids.rs  params.rs
connection/proxmox/src/: credential_preferences.blp  credential_preferences.rs  field-monitor-connection-proxmox.gresource.xml  lib.rs  meson.build  preferences.blp  preferences.rs  tokiort.rs
connection/proxmox/src/api/: cache.rs  connection.rs  mod.rs  node.rs  provider.rs  vm.rs
connection/vnc/: Cargo.toml
connection/vnc/src/: credential_preferences.rs  field-monitor-connection-vnc.gresource.xml  lib.rs  meson.build  preferences.rs
data/: de.capypara.FieldMonitor.desktop.in  de.capypara.FieldMonitor.desktop.in.in  de.capypara.FieldMonitor.gschema.xml  de.capypara.FieldMonitor.gschema.xml.in  de.capypara.FieldMonitor.metainfo.xml.in  de.capypara.FieldMonitor.metainfo.xml.in.in  de.capypara.FieldMonitor.mime.rdp.xml.in  de.capypara.FieldMonitor.mime.virt-viewer.xml.in  de.capypara.ProxmoxViewer.desktop.in  de.capypara.ProxmoxViewer.gschema.xml  de.capypara.ProxmoxViewer.metainfo.xml.in  de.capypara.StageScreen.desktop.in  de.capypara.StageScreen.gschema.xml  de.capypara.StageScreen.metainfo.xml.in  meson.build
data/icons/: meson.build
examples/: rdw_demo.rs
gcr-sys-minimal/: Cargo.toml
gcr-sys-minimal/src/: lib.rs
gcr-sys-minimal/tests/: abi.rs  constant.c  layout.c  manual.h
lib/: Cargo.toml
lib/src/: busy.rs  cache.rs  cert_security.rs  config.rs.in  field-monitor-lib.gresource.xml  i18n.rs  lib.rs  macros.rs  meson.build  secrets.rs  tokiort.rs
lib/src/adapter/: mod.rs  rdp.rs  spice.rs  types.rs  vnc.rs  vte_pty.rs
lib/src/adapter/usbredir/: device.rs  error.rs  mod.rs  spice.rs
lib/src/connection/: config_value.rs  configuration.rs  instance.rs  mod.rs  types.rs
lib/src/gtk/: mod.rs  save_credentials_button.blp  save_credentials_button.rs
po/: LINGUAS  POTFILES  de.po  es.po  meson.build  pt_BR.po  ru.po  zh_CN.po
src/: add_connection_dialog.rs  application.rs  cert_security.rs  config.rs.in  connection.rs  connection_list.blp  connection_list.rs  connection_loader.rs  connections.blp  connections.rs  field-monitor.gresource.xml  field-monitor.gresource.xml.in  i18n.rs  main.rs  meson.build  proxmox-viewer.gresource.xml  remote_server_info.rs  save_credentials_button.blp  save_credentials_button.rs  secrets.rs  settings.rs  shortcuts-dialog.blp  stage-screen.gresource.xml  style-dark.css  style-hc-dark.css  style-hc.css  style.css  util.rs  util_signal_handlers.rs  window.blp  window.rs  window.ui
src/adapter/: spice.rs  types.rs
src/connection/: configuration.rs  instance.rs  mod.rs  types.rs
src/connection/vnc/: credential_preferences.blp  credential_preferences.rs  mod.rs  preferences.blp  preferences.rs
src/gtk/: help-overlay.blp
src/quick_connect/: mod.rs  preferences.blp  preferences.rs  rdp.rs  spice.rs  util.rs  virt_viewer_file.rs  vnc.rs
src/widget/: add_connection_dialog.blp  add_connection_dialog.rs  app_status.blp  app_status.rs  authenticate_connection_dialog.blp  authenticate_connection_dialog.rs  certificate_details_window.blp  certificate_details_window.rs  certificate_trust_dialog.rs  close_warning_dialog.rs  connection_list.blp  connection_list.rs  connection_view.blp  connection_view.rs  focus_grabber.rs  foucs_grabber.rs  grab_note.rs  mod.rs  navbar_row.rs  preferences.blp  preferences.rs  pulse_anim_bin.rs  quick_connect_dialog.blp  quick_connect_dialog.rs  single_screen_window.blp  single_screen_window.rs  update_connection_dialog.blp  update_connection_dialog.rs  window.blp  window.rs
src/widget/connection_list/: common.rs  connection_entry.blp  connection_entry.rs  connection_list_navbar.blp  connection_list_navbar.rs  connection_stack.blp  connection_stack.rs  info_page.blp  info_page.rs  mod.rs  server_entry.rs  server_group.blp  server_group.rs  server_info.rs  server_row.rs
src/widget/connection_list/server_entry/: action_row.rs  expander_row.rs
src/widget/connection_list/server_info/: icon.blp  icon.rs
src/widget/connection_view/: connection_tab_view.blp  connection_tab_view.rs  connection_view_navbar.blp  connection_view_navbar.rs  mod.rs  server_screen.blp  server_screen.rs
src/widget/usb_redir/: mod.rs  settings.blp  settings.rs  settings_dialog.blp  settings_dialog.rs
subprojects/: blueprint-compiler.wrap
vte-pty-driver/lib/: Cargo.toml
vte-pty-driver/lib/src/: client.rs  client_macros.rs  dbus_client.rs  dbus_server.rs  lib.rs
vte-pty-driver/libvirt/: Cargo.toml
vte-pty-driver/libvirt/src/: main.rs  meson.build
vte-pty-driver/proxmox/: Cargo.toml
vte-pty-driver/proxmox/src/: main.rs  meson.build
(+16 files in other folders)
