[workspace]
members = [
    ".",
    "lib",
    "connection/debug",
    "connection/generic-group",
    "connection/libvirt",
    "connection/proxmox",
    "connection/proxmox/proxmox-api",
    "vte-pty-driver/lib",
    "vte-pty-driver/libvirt",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3"
log = "0.4"
async-std = "1.12"
num_enum = "0.7"
indexmap = "2.5"
secure-string = "0.3"
http = "1.1"
uuid = { version = "1.10", features = ["v7"] }
parking_lot = "0.12"
which = "6"
field-monitor-vte-driver-lib = { path = "vte-pty-driver/lib" }
proxmox-api = { path = "connection/proxmox/proxmox-api" }

[workspace.dependencies.glib]
features = ["log"]
version = "0.20"

[workspace.dependencies.gtk]
package = "gtk4"
features = ["v4_14"]
version = "0.9"

[workspace.dependencies.adw]
package = "libadwaita"
features = ["v1_5"]
version = "0.7"

[workspace.dependencies.rdw]
package = "rdw4"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
branch = "field-monitor"

[workspace.dependencies.rdw-spice]
package = "rdw4-spice"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
branch = "field-monitor"
default-features = false

[workspace.dependencies.rdw-vnc]
package = "rdw4-vnc"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
branch = "field-monitor"
default-features = false

[workspace.dependencies.rdw-rdp]
package = "rdw4-rdp"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
branch = "field-monitor"
default-features = false

[workspace.dependencies.vte]
package = "vte4"
version = "0.8"
features = ["v0_76"]

[workspace.dependencies.oo7]
version = "0.3"

[workspace.lints]
clippy.await_holding_refcell_ref = "deny"

[package]
name = "field-monitor"
description = "Viewer for virtual machines and external screens"
edition = { workspace = true }
rust-version = { workspace = true }

[features]
devel = ["dep:field-monitor-debug"]
prod = ["log/release_max_level_info"]

[dependencies]
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
itertools = "0.13"
secure-string = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.5"
lru = "0.12"
async-std = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
rdw = { workspace = true }
vte = { workspace = true }
oo7 = { workspace = true }
libfieldmonitor = { path = "./lib" }
field-monitor-generic-group = { path = "./connection/generic-group" }
field-monitor-libvirt = { path = "./connection/libvirt" }
field-monitor-proxmox = { path = "./connection/proxmox" }
field-monitor-debug = { path = "./connection/debug", optional = true }

[lints]
workspace = true
