[workspace]
members = [
    ".",
    "lib",
    "connection/debug",
    "connection/generic-group",
    "connection/libvirt",
    "connection/proxmox",
    "connection/proxmox/proxmox-api",
    "vte-pty-driver/lib",
    "vte-pty-driver/libvirt",
    "vte-pty-driver/proxmox",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
futures = "0.3"
log = "0.4"
num_enum = "0.7"
indexmap = "2.12"
secure-string = "0.3"
http = "1.3"
uuid = { version = "1.19", features = ["v7"] }
parking_lot = "0.12"
field-monitor-vte-driver-lib = { path = "vte-pty-driver/lib" }
proxmox-api = { path = "connection/proxmox/proxmox-api" }
tokio = { version = "1.48", features = ["parking_lot", "rt-multi-thread"] }

[workspace.dependencies.glib]
features = ["log"]
version = "0.21"

[workspace.dependencies.gtk]
package = "gtk4"
features = ["v4_14"]
version = "0.10"

[workspace.dependencies.adw]
package = "libadwaita"
features = ["v1_6"]
version = "0.8"

[workspace.dependencies.rdw]
package = "rdw4"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
#branch = "master"
rev = "5b330c5f85f5cf45c2404eaef8b2e5023070ad7a"

[workspace.dependencies.rdw-spice]
package = "rdw4-spice"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
#branch = "master"
rev = "5b330c5f85f5cf45c2404eaef8b2e5023070ad7a"
default-features = false

[workspace.dependencies.rdw-vnc]
package = "rdw4-vnc"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
#branch = "master"
rev = "5b330c5f85f5cf45c2404eaef8b2e5023070ad7a"
default-features = false

[workspace.dependencies.rdw-rdp]
package = "rdw4-rdp"
git = "https://gitlab.gnome.org/theCapypara/rdw.git"
#branch = "master"
rev = "5b330c5f85f5cf45c2404eaef8b2e5023070ad7a"
default-features = false

[workspace.dependencies.vte]
package = "vte4"
version = "0.9"
features = ["v0_76"]

[workspace.dependencies.oo7]
version = "0.5"
default-features = false
features = ["async-std", "native_crypto"]

[workspace.lints]
clippy.await_holding_refcell_ref = "deny"
clippy.todo = "warn"

[package]
name = "field-monitor"
description = "Viewer for virtual machines and other external screens"
edition = { workspace = true }
rust-version = { workspace = true }

[features]
devel = ["dep:field-monitor-debug"]
prod = ["log/release_max_level_info"]

[dependencies]
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_ini = "0.2"
futures = { workspace = true }
uuid = { workspace = true }
fluent-uri = "0.4"
itertools = "0.14"
sorted-vec = "0.8"
secure-string = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.5"
num_enum = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
rdw = { workspace = true }
rdw-vnc = { workspace = true }
vte = { workspace = true }
oo7 = { workspace = true }
libfieldmonitor = { path = "./lib" }
field-monitor-generic-group = { path = "./connection/generic-group" }
field-monitor-libvirt = { path = "./connection/libvirt" }
field-monitor-proxmox = { path = "./connection/proxmox" }
field-monitor-debug = { path = "./connection/debug", optional = true }

[lints]
workspace = true
