[package]
name = "libfieldmonitor"
edition.workspace = true
rust-version.workspace = true

[dependencies]
field-monitor-vte-driver-lib = { workspace = true, features = ["server"] }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
rdw = { workspace = true }
rdw-spice = { workspace = true }
rdw-rdp = { workspace = true }
rdw-vnc = { workspace = true }
vte = { workspace = true }
thiserror = "2"
indexmap = { workspace = true }
secure-string = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
derive_builder = "0.20"
nix = { version = "0.29", features = ["signal"] }
async-rwlock = "1.3"
tokio = { workspace = true, features = ["fs"] }

[lints]
workspace = true
