[package]
name = "field-monitor-debug"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libfieldmonitor = { path = "../../lib" }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
rdw = { workspace = true }
rdw-spice = { workspace = true }
rdw-rdp = { workspace = true }
rdw-vnc = { workspace = true }
vte = { workspace = true }
num_enum = { workspace = true }
indexmap = { workspace = true }
rand = "0.9"

[lints]
workspace = true
