[package]
name = "field-monitor-debug"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libfieldmonitor = { path = "../../lib" }
anyhow = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
vte = { workspace = true }
num_enum = { workspace = true }
indexmap = { workspace = true }
rand = "0.9"

[lints]
workspace = true
