[package]
name = "field-monitor-generic-group"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libfieldmonitor = { path = "../../lib" }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
indexmap = { workspace = true }
secure-string = { workspace = true }
uuid = { version = "1.10", features = ["v7"] }

[lints]
workspace = true