[package]
name = "field-monitor-generic-group"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libfieldmonitor = { path = "../../lib" }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
glib = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
indexmap = { workspace = true }
secure-string = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
