[package]
name = "field-monitor-libvirt"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libfieldmonitor = { path = "../../lib" }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-std = { workspace = true }
log = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
num_enum = { workspace = true }
secure-string = { workspace = true }
virt = { version = "0.4", features = ["qemu"] }
quick-xml = { version = "0.36", features = ["serialize", "serde-types"] }
serde = { workspace = true }
which = { workspace = true }

[lints]
workspace = true