[package]
name = "field-monitor-proxmox"
edition.workspace = true
rust-version.workspace = true

[dependencies]
proxmox-api = { workspace = true }
libfieldmonitor = { path = "../../lib" }
gettext-rs = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
http = "1.3"
tokio = { workspace = true }
log = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
secure-string = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
