[package]
name = "field-monitor-vte-driver-lib"
edition.workspace = true
rust-version.workspace = true

[features]
server = ["dep:base64", "dep:parking_lot", "dep:log"]
client = []

[dependencies]
log = { workspace = true, optional = true }
zbus = "5.9"
parking_lot = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }

[lints]
workspace = true
