[package]
name = "field-monitor-vte-driver-proxmox"
edition.workspace = true
rust-version.workspace = true

[dependencies]
field-monitor-vte-driver-lib = { workspace = true, features = ["client"] }
proxmox-api = { workspace = true }
tokio = { version = "1.40", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "io-std",
    "sync",
] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = { workspace = true }
nix = { version = "0.29", features = ["signal", "term", "ioctl"] }
serde_json = { workspace = true }
async-tungstenite = { version = "0.28", features = ["tokio-runtime", "tokio-openssl"] }
openssl = "0.10"
http = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
