[package]
name = "proxmox-api"
edition.workspace = true
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
log = { workspace = true }
http = "1.3"
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
secure-string = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
simple_logger = "5"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
